2004-09-05  Andy Wingo  <wingo@pobox.com>

	* gnome/Makefile.am, gnome/overrides/Makefile.am: Add overrides/
	to the dist.

	* gnome/overrides/gdk.defs, gnome/overrides/gtk.defs: Moved from
	the *-overrides.defs in the defs module.

	* gnome/gw/gdk-spec.scm, gnome/gw/gtk-spec.scm: Adapted to module
	location changes, load-defs changes.

	* gnome/contrib/Makefile.am: Add filtered-list.scm,
	delay-tree-model.scm, and help-browser.scm to the dist/install
	list.

	* defs-checks.ac: Added.

	* guile-gnome-gtk.pc.in, guile-gnome-gtk-uninstalled.pc.in: Moved
	from guile-gtk*.pc.in.

2004-09-04  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/Makefile.am: Add CFLAGS=-g, so that the user doesn't
	inadvertantly compile with optimizations.

2004-07-10  Andy Wingo  <wingo@pobox.com>

	* gnome/contrib/texinfo-buffer.scm (false-if-exception): New
	macro, like the standard one but doesn't affect the-last-stack.
	(tag-prop-alist): Add tags for entry-header, entry-body, and asis.
	(arg-ref): Use assq-ref.
	(identity): New handler, just returns the body.
	(*table-formatter*): Fluid, holds the current table formatter
	(@code, @asis, etc.).
	(table): Use with-fluids to set the formatter while processing the
	body. Hm, I think this needs to be pre-order, though.
	(entry): Format the entry header with the table formatter.
	(ignore-list): Add indexing commands (cindex, etc.) to the ignore
	list.
	(rules): Add a rule for texinfo, using the identity handler.
	(with-nesting): Up to default nesting from 25px to 35px.
	(fill-buffer): More informative errors.
	(stexi->text-tagged-tree): New (private) function, calls
	pre-post-order to do the first pass.
	
	* gnome/contrib/help-browser.scm (populate-help-hook): New hook,
	run right before the help window is constructed.
	(set-default-help-document!): Fix a typo.
	(make-help-window): Set the title properly when no iter is
	selected.
	(make-help-window): Add again the warning that indexing can take