@@ -33,8 +33,8 @@ lib_LTLIBRARIES = $(GDKLIB) $(GTKLIB)
 
 ########################################################################
 ## gdk
-libgw_guile_gnome_gdk_la_SOURCES = guile-gnome-gw-gdk.c \
-	gdk-support.c gdk-support.h
+nodist_libgw_guile_gnome_gdk_la_SOURCES = guile-gnome-gw-gdk.c
+libgw_guile_gnome_gdk_la_SOURCES = gdk-support.c gdk-support.h
 
 libgw_guile_gnome_gdk_la_CFLAGS = $(GUILE_GLIB_CFLAGS) \
 	$(AM_CFLAGS) $(GDK_CFLAGS) $(GUILE_CFLAGS) \
@@ -49,7 +49,8 @@ CLEANFILES += $(wildcard guile-gnome-gw-gdk.*) gdk.scm
 
 ########################################################################
 ## gtk
-libgw_guile_gnome_gtk_la_SOURCES = guile-gnome-gw-gtk.c	\
+nodist_libgw_guile_gnome_gtk_la_SOURCES = guile-gnome-gw-gtk.c
+libgw_guile_gnome_gtk_la_SOURCES = \
 	guile-gtk-tree-model.c guile-gtk-tree-model.h gtk-support.c gtk-support.h
 
 libgw_guile_gnome_gtk_la_CFLAGS = $(GUILE_GLIB_CFLAGS) \
